# Courses

./: ksg-clang.c
k-n-d/: CMakeLists.txt  README.md  dns.h  dns_query.c  knDNS.c
k-n-d/report/: report.tex
k-n-d/src/: dns_query.hpp  knDNS.c
k-s-g/: CMakeLists.txt  README.md  ksg-clang.c  main.c
k-s-g/lib/: ksg-llvm-pass.so.cc  ksg-stack-guard.c
tmp/: Makefile
